--- a/index.html
+++ b/index.html
@@ -1,5 +1,53 @@
-<form action="https://formspree.io/hacikho01@gmail.com" method="POST">
-  <input type="text" name="name">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
-</form>
+<html>
+<head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.map"></script>
+</head>
+<body>
+<div class=modal-body style="background-color: #454545">
+    <p>Please use the form below to contact us regarding feedback or any questions you may have!
+        We will never use the information given below to spam you and we will never pass on your
+        information to a 3rd party.</p>
+    <p>As we are using <a target="_blank" href="http://formspree.io">FormSpree</a> for this form
+    please consult their privacy policy for any questions regarding this matter.</p>
+    <form id="contactform" method="POST">
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">Name</span>
+                <input name="form-name-input" type="text" name="name" class="form-control" required>
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">Email</span>
+                <input name="form-email-input" type="email" name="_replyto" class="form-control" required>
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">Subject</span>
+                <input name="form-subject-input" type="text" name="subject" class="form-control" required>
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">Description</span>
+                <textarea name="form-description-input" name="description" class="form-control" rows="4" cols="60" required></textarea>
+            </div>
+            <input type="text" name="_gotcha" style="display:none" />
+            <input class="btn btn-success" data-dismiss="modal" type="submit" id="form-submit-btn" value="Submit">
+            <input type="hidden" name="_next" value="http://www.dynamicrealities.net" onclick="FormSentConfirmation()"/>
+        </div>
+		
+		
+        <script>
+		
+            $("#sendMessage").on("click", function() {
+    $.ajax({
+        url: "//formspree.io/hkarahasanoglu@firstenergycorp.com", 
+        method: "POST",
+        data: {message: "hello!"},
+        dataType: "json"
+    });
+});
+        </script>
+    </form>
+</div>
+<div class="modal-footer" style="background-color: #333333">
+    <button class="btn btn-danger btn-bg" data-dismiss="modal" type="button" id="form-dismiss-btn" onclick="">Close</button>
+</div>
+</body>
+</html>
