--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <html>
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.map"></script>
+  <link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
 </head>
 <body>
+  <div class="container">  
 <form action="https://formspree.io/hkarahasanoglu@firstenergycorp.com" method="POST">
-  <input type="text" name="name">
+  <!--<input type="text" name="name">
   <input type="email" name="_replyto">
-  <input type="submit" value="Send">
+  <input type="submit" value="Send">-->
+  
+      <h3>UNIFIER Quick Help</h3>
+    <h4>Please fill out the form for non-critical tickets</h4>
+    <fieldset>
+      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Your Email Address" type="email" tabindex="2" required>
+    </fieldset>
+     <fieldset>
+      <input placeholder="SAPID" type="sapis" tabindex="2" required>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+    </fieldset>
+    <fieldset>
+      <textarea placeholder="Decribe your problem...." tabindex="5" required></textarea>
+    </fieldset>
+    <fieldset>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+    </fieldset>
+  
 </form>
 </div>
 
 </body>
 </html>
+
