--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       <h3>UNIFIER Quick Help</h3>
     <h4>Please fill out the form for non-critical tickets</h4>
     <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+      <input placeholder="Your name" type="text" tabindex="1" name="name" required autofocus>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
+      <input placeholder="Your Email Address" type="email" tabindex="2"  name="_replyto" required>
     </fieldset>
      <fieldset>
-      <input placeholder="SAPID" type="sapis" tabindex="2" required>
+      <input placeholder="SAPID" type="sapis" tabindex="2" name="sapid" required>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+      <input placeholder="Your Phone Number" type="tel" tabindex="3" name="phone number" required>
     </fieldset>
     <fieldset>
-      <textarea placeholder="Decribe your problem...." tabindex="5" required></textarea>
+      <textarea placeholder="Decribe your problem...." tabindex="5" name="error" required></textarea>
     </fieldset>
     <fieldset>
       <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
