--- a/index.html
+++ b/index.html
@@ -8,30 +8,14 @@
 <body>
   <div class="container">  
 <form action="https://formspree.io/hkarahasanoglu@firstenergycorp.com" method="POST">
-  <!--<input type="text" name="name">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">-->
-  
-      <h3>UNIFIER Quick Help</h3>
-    <h4>Please fill out the form for non-critical tickets</h4>
-    <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" name="name" required autofocus>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2"  name="_replyto" required>
-    </fieldset>
-     <fieldset>
-      <input placeholder="SAPID" type="sapis" tabindex="2" name="sapid" required>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Phone Number" type="tel" tabindex="3" name="phone number" required>
-    </fieldset>
-    <fieldset>
-      <textarea placeholder="Decribe your problem...." tabindex="5" name="error" required></textarea>
-    </fieldset>
-    <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-    </fieldset>
+  <form method="POST" action="https://formspree.io/YOUREMAILHERE">
+  <input type="name" name="name" placeholder="Your name">
+  <input type="sapid" name="sapid" placeholder="Your sapid">
+  <input type="email" name="email" placeholder="Your email">
+  <input type="phone" name="phone" placeholder="Your phone">
+  <textarea name="message" placeholder="Test Message"></textarea>
+  <button type="submit">Send Test</button>
+</form>
   
 </form>
 </div>
