--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">  
-<form action="https://formspree.io/hkarahasanoglu@firstenergycorp.com" method="POST">
+<form method="POST">
   <form method="POST" action="https://formspree.io/YOUREMAILHERE">
   <input type="name" name="name" placeholder="Your name">
   <input type="sapid" name="sapid" placeholder="Your sapid">
@@ -25,7 +25,7 @@
 $("#sendMessage").on("click", function() {
     message = $("#contactform").serialize();
     $.ajax({
-        url: "//formspree.io/hacikho01@gmail.com", 
+        url: "//formspree.io/hkarahasanoglu@firstenergycorp.com", 
         method: "POST",
         data: {message: message},
         dataType: "json"
